# methodic_cache

./: .envrc  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
src/: _hashable.py  methodic_cache.py
src/methodic_cache/: __init__.py  _cache.py  _exceptions.py  _hashable.py  _wrappers.py
tests/: detect_leaks.py  test_methodic_cache.py
tests/wrappers/: test_hashable_wrapper.py
