[tool.poetry]
name = "methodic-cache"
version = "0.1.0"
description = "functools.cache() for methods, done correctly"
authors = ["Alessio Bogon <778703+youtux@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
# TODO: Try to support a lower version of cachetools
cachetools = "^5.0.0"
typing-extensions = {version = "^4.5.0", python = "3.7"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.1"
types-cachetools = "^5.3.0.0"
pytest-repeat = "^0.9.1"


[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
files = "src/**/*.py"
